# graphql-codegen-repro

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  codegen-template.yml  codegen.yml  generate-config.bzl  package-lock.json  package.json  schema.graphql
